# padi-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  00-master-index.md  01-strategy.md  02-product-plan.md  03-prd-stage1.md  04-prd-stage2.md  05-prd-stage3.md  06-prd-stage4.md  07-prd-stage5.md  08-software-dev-plan.md  09-design-system.md  10-lifecycle-stage1.md  11-lifecycle-stage2.md  12-lifecycle-stage3.md  13-lifecycle-stage4.md  14-lifecycle-stage5.md  15-lifecycle-crosscutting-ops.md  16-multigrade-expansion.md  17-claude-code-skills-spec.md  ACTIVE_CONTEXT.md  CLAUDE.md  CONTRIBUTING.md  ENG-000-foundations.md  ENG-001-stage1.md  ENG-002-stage2.md  ENG-003-stage3.md  ENG-004-stage4.md  ENG-005-stage5.md  ENG-006-crosscutting.md  ENG-MASTER-INDEX.md  FINAL_TESTING_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION-SUMMARY.md  PARENT-DASHBOARD-422-FIX-FINAL-REPORT.md  README.md  STAGE1-FIX-GUIDE.md  STAGE1_COMPLETION_SUMMARY.md  STAGE2-IMPLEMENTATION-REPORT.md  STAGE2-P3-IMPLEMENTATION-SUMMARY.md  (+6 more)
.claude/rules/: backend-rules.md  frontend-rules.md  test-rules.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Padi Design System/: Solosail Design System-print.html  Solosail Design System.html  solosail-tokens.css
apps/api/: .env.example  .gitignore  CLAUDE.md  Dockerfile  MANUAL_TESTING_GUIDE.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  verify_setup.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  003_add_stage2_tables.py  004_student_display_name.py  005_align_psq_question_fk.py  006_practice_session_accuracy.py  007_irt_parameters.py  008_vector_content_embedding.py  1a4a929746ac_002_add_encrypted_email_fields.py
apps/api/scripts/: __init__.py  create_tables.py  export_openapi.py  seed_data.py  seed_oregon_standards.py  seed_questions.py  seed_simple.py
apps/api/scripts/seed_data/: grade4_questions.json
apps/api/src/: __init__.py  main.py
apps/api/src/agents/: __init__.py  assessment_agent.py  orchestrator.py  progress_tracker.py  qgen_agent.py  state.py  tutor_agent.py
apps/api/src/api/: __init__.py
apps/api/src/api/v1/: health.py  router.py
apps/api/src/api/v1/endpoints/: __init__.py  assessments.py  auth.py  consent.py  generation_jobs.py  learning_plans.py  parent.py  practice_ws.py  standards.py  students.py
apps/api/src/clients/: __init__.py  llm_client.py  ses_client.py
apps/api/src/core/: __init__.py  config.py  database.py  encryption.py  limiter.py  logging.py  redis_client.py  security.py
apps/api/src/models/: __init__.py  base.py  models.py
apps/api/src/repositories/: __init__.py  assessment_repository.py  base.py  consent_repository.py  generation_job_repository.py  learning_plan_repository.py  question_repository.py  standard_repository.py  student_repository.py  user_repository.py
apps/api/src/schemas/: __init__.py  assessment.py  generation_job.py  learning_plan.py  parent.py  response.py  standard.py  user.py
apps/api/src/schemas/internal/: assessment_state.py
apps/api/src/services/: __init__.py  assessment_service.py  audit_service.py  badge_service.py  bkt_impl.py  bkt_service.py  consent_service.py  embedding_service.py  irt_service.py  learning_plan_service.py  llm_question_generator.py  question_selection_service.py  skill_graph_service.py  streak_service.py
apps/api/tests/: __init__.py  conftest.py  test_config.py  test_llm_client.py  test_models.py  test_security.py
apps/api/tests/agents/: test_assessment_agent.py  test_orchestrator_smoke.py  test_tutor_agent.py
apps/api/tests/api/: test_assessments_authz.py  test_assessments_endpoint.py  test_audit_integration.py  test_consent_endpoint.py  test_generation_jobs_endpoint.py  test_health.py  test_learning_plans_endpoint.py  test_parent_dashboard.py  test_practice_session_authz.py  test_practice_session_flow.py  test_practice_sessions.py  test_practice_ws.py  test_rate_limiting.py  test_standards_endpoint.py  test_students_endpoint.py
apps/api/tests/core/: test_config_secrets.py  test_database.py  test_logging_redaction.py  test_redis_client.py
apps/api/tests/integration/: test_assessment_flow.py  test_coppa_consent.py  test_parent_registration.py  test_session_recovery.py
apps/api/tests/manual/: quick_test.py  test_bkt.py  verify_setup.py
apps/api/tests/migrations/: test_004_standards.py  test_005_question_bank.py  test_006_bkt_state.py  test_007_import_logs.py  test_008_pgvector_extension.py
apps/api/tests/performance/: test_assessment_api.py  test_bkt_benchmark.py  test_database_queries.py  test_question_load.py
apps/api/tests/redis/: test_assessment_cache.py  test_concurrent_access.py  test_question_cache.py
apps/api/tests/repositories/: test_assessment_repository.py  test_base_repository.py  test_consent_repository.py  test_question_repository.py  test_standard_repository.py  test_student_repository.py
apps/api/tests/schemas/: test_assessment_state.py
apps/api/tests/scripts/: test_seed_data.py
apps/api/tests/security/: test_coppa_compliance.py  test_encryption_service.py  test_jwt_validation.py  test_rls_parent_child.py  test_sql_injection.py
apps/api/tests/services/: test_assessment_service.py  test_audit_service.py  test_bkt_service.py  test_consent_service.py  test_irt_service.py  test_learning_plan_service.py  test_question_selection_service.py  test_scoring_engine.py  test_skill_graph_service.py
apps/web/: CLAUDE.md  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
docs/engineering/: 09-design-system.md  17-claude-code-skills-spec.md  ENG-002-stage2.md  ENG-003-stage3.md  ENG-004-stage4.md  ENG-006-crosscutting.md
docs/history/: 2026-04-21-stage2-remediation-report.md  2026-05-16-execution-plan.md  2026-05-16-phase-0-3-report.md  P3-IMPLEMENTATION-LOG.md  PARENT-DASHBOARD-422-FIX-IMPLEMENTATION-GUIDE.md  PARENT-DASHBOARD-422-FIX-IMPLEMENTATION-REPORT.md  SECURITY-ROTATION-2026-04-20.md  (+8 more)
(+60 files in other folders)
