[project]
name = "padi-api"
version = "0.1.0"
description = "PADI.AI FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # ORM + DB
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.5",
    # Validation
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Auth
    "authlib>=1.3.0",
    "PyJWT[crypto]>=2.8.0",
    "cryptography>=42.0.0",
    # Cache / state
    "redis>=5.0.0",
    # HTTP client
    "httpx>=0.27.0",
    # LLM routing
    "litellm>=1.40.0",
    # Skill graph
    "networkx>=3.2",
    # AWS (SES, S3)
    "boto3>=1.34.0",
    # Observability
    "sentry-sdk[fastapi]>=2.1.1",
    # Rate limiting
    "slowapi>=0.1.9",
    # Content validation
    "textstat>=0.7.3",
    # Embeddings (question dedup)
    "sentence-transformers>=2.7.0",
]

[project.optional-dependencies]
dev = [
    # Test runner
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=4.0.0",
    # Test fixtures + helpers
    "faker>=24.0.0",
    "freezegun>=1.4.0",
    "testcontainers[postgresql]>=4.0.0",
    # Static analysis
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit[toml]>=1.7.7",
    "detect-secrets>=1.5.0",
    "safety>=3.2.0",
    # Pre-commit
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
# E/F = pyflakes/pycodestyle, I = isort, B = bugbear, UP = pyupgrade,
# SIM = simplify, RUF = ruff-specific, ASYNC = async checks, S = bandit-lite,
# N = pep8-naming.
select = ["E", "F", "I", "N", "W", "B", "UP", "SIM", "RUF", "ASYNC", "S"]
ignore = [
    "E501",   # line length handled by formatter
    "S101",   # assert allowed in tests
    "B008",   # FastAPI uses Depends() in defaults intentionally
    "N818",   # exception naming
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N802", "N806"]
"scripts/**" = ["S", "N802"]
"alembic/**" = ["S", "N"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "src.services.bkt_service",
    "src.services.bkt_impl",
    "src.services.skill_graph_service",
    "src.services.llm_question_generator",
    "src.services.learning_plan_service",
    "src.services.assessment_service",
    "src.services.question_selection_service",
    "src.core.*",
    "src.clients.*",
    "src.repositories.*",
    "src.agents.*",
]
disallow_untyped_defs = true
strict_optional = true
warn_return_any = true

# ---------------------------------------------------------------------------
# Bandit
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "alembic/versions"]
skips = ["B101"]  # assert usage

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
strict_markers = true
strict_config = true
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy.*",
    "ignore::DeprecationWarning:litellm.*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring external services",
    "unit: pure unit tests",
    "concurrency: concurrency-sensitive tests",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = [
    "src/main.py",
    "tests/*",
    "alembic/*",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
